--- a/AromaRestaurant/Content/Site.css
+++ b/AromaRestaurant/Content/Site.css
@@ -1,24 +1,54 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿*
+{
+	margin: 0px;
+	padding: 0px;
+	border: none;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+body
+{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	background-color: #FBF9EF;
+	padding: 60px 6% 0px 6%;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+#container
+{
+	float: left;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.navbar-brand {
+    padding-top: 7px;
+}
+
+#brand {
+    display:inline;
+    position:absolute;
+}
+
+/*#promotion
+{
+	height: 300px; 
+	width: 700px; 
+	background: url(/Assets/images/home-showcase.png) no-repeat;
+}*/
+
+ul li a
+{
+	font-size: 16px;
+}
+
+#main
+{
+	overflow: hidden;
+	padding: 0 0 15px 10px;
+	float: left;
+}
+
+ul
+{
+	list-style-type: square;
+	margin-left: 25px;
+	font-size: 14px;
 }
